--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,5 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/burger_store
 spring.datasource.username=postgres
 spring.datasource.password=123123
-
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
