--- a/video-player-gridfs-mongodb/pom.xml
+++ b/video-player-gridfs-mongodb/pom.xml
@@ -8,22 +8,18 @@
         <version>3.1.2</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>com</groupId>
-    <artifactId>stream-video-player</artifactId>
+    <groupId>com.videoplayer</groupId>
+    <artifactId>video-player-gridfs-mongodb</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>stream-video-player</name>
-    <description>stream-video-player</description>
+    <name>video-player-gridfs-mongodb</name>
+    <description>video-player-gridfs-mongodb</description>
     <properties>
         <java.version>17</java.version>
     </properties>
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-cassandra</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-cassandra-reactive</artifactId>
+            <artifactId>spring-boot-starter-data-mongodb</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -39,11 +35,6 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>io.projectreactor</groupId>
-            <artifactId>reactor-test</artifactId>
             <scope>test</scope>
         </dependency>
     </dependencies>
